--- a/arrays-bank/index.html
+++ b/arrays-bank/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="icon.png" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
-    <title>Bankist</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Array Tools</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
-      <img src="logo.png" alt="Logo" class="logo" />
+      <!-- <img src="logo.png" alt="Logo" class="logo" /> -->
       <form class="login">
         <input
           type="text"
@@ -124,5 +123,9 @@
     </footer> -->
 
     <script src="script.js"></script>
+    <!-- <script src="challenge1.js"></script> -->
+    <!-- <script src="challenge2.js"></script>
+    <script src="challenge3.js"></script> -->
+    <script src="challenge4.js"></script>
   </body>
 </html>
