script for advance dom
script for advance dom

--- a/advance-dom/index.html
+++ b/advance-dom/index.html
@@ -12,6 +12,9 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
+
+    <script defer src="script.js"></script>
+    <!-- <script src="script-dom.js"></script> -->
   </head>
   <body>
     <header class="header">
@@ -21,6 +24,8 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
+          designer="Kean"
+          data-version-number="3.0"
         />
         <ul class="nav__links">
           <li class="nav__item">
@@ -41,6 +46,7 @@
       </nav>
 
       <div class="header__title">
+        <!-- <h1 onclick="alert('HTML alert')"> -->
         <h1>
           When
           <!-- Green highlight effect -->
@@ -325,8 +331,8 @@
         <a
           class="footer__link twitter-link"
           target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
+          href="https://twitter.com/keanduque"
+          >Kean Duque</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
         as your own product.
       </p>
@@ -349,7 +355,9 @@
       </form>
     </div>
     <div class="overlay hidden"></div>
-
-    <script src="script.js"></script>
+    <!-- 
+    <script src="script.js"></script> -->
+    <!-- <script src="script-dom.js"></script> -->
+    <!-- DONT need to load DOMContentLoaded because JS is already at the end-->
   </body>
 </html>
