--- a/oop/index.html
+++ b/oop/index.html
@@ -22,7 +22,11 @@
         color: white;
       }
     </style>
-    <script defer src="script.js"></script>
+    <!-- <script defer src="script.js"></script> -->
+    <!-- <script defer src="challenge1.js"></script> -->
+    <!-- <script defer src="challenge2.js"></script> -->
+    <!-- <script defer src="challenge3.js"></script> -->
+    <script defer src="challenge4.js"></script>
   </head>
   <body>
     <h1>Object Oriented Programming (OOP) With JavaScript</h1>
