--- a/K-async/index.html
+++ b/K-async/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
+    <!-- <script defer src="challenge1.js"></script> -->
+    <!-- <script defer src="challenge2.js"></script> -->
+    <!-- <script defer src="challenge3.js"></script> -->
     <title>Asynchronous JavaScript</title>
   </head>
   <body>
@@ -24,7 +27,7 @@
         </article>
         -->
       </div>
-      <!-- <button class="btn-country">Where am I?</button> -->
+      <button class="btn-country">Where am I?</button>
       <div class="images"></div>
     </main>
   </body>
